Fix overflow scrolling on touch devices

--- a/assetsSource/css/layout/Docs/Docs.0900.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0900.pcss
@@ -10,6 +10,9 @@
     height: calc(100% - 46px);
     overflow: scroll;
     top: 46px;
+
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch;
 }
 
 .DocsNav__MobileActivator {
